# mail-laser

./: .gitignore  Architecture.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  rust-toolchain.toml  todo.md
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: docker-publish.yml  docs.yml  release.yml
docs/: next.config.mjs  package.json  pnpm-lock.yaml
docs/src/app/: layout.tsx  not-found.tsx  page.md
docs/src/app/docs/api-reference/: page.md
docs/src/app/docs/architecture/: page.md
docs/src/app/docs/attachments/: page.md
docs/src/app/docs/authorization/: page.md
docs/src/app/docs/configuration/: page.md
docs/src/app/docs/dmarc/: page.md
docs/src/app/docs/dns-network-setup/: page.md
docs/src/app/docs/docker/: page.md
docs/src/app/docs/header-passthrough/: page.md
docs/src/app/docs/health-check/: page.md
docs/src/app/docs/installation/: page.md
docs/src/app/docs/resilience/: page.md
docs/src/app/docs/smtp-server/: page.md
docs/src/app/docs/testing/: page.md
docs/src/app/docs/upgrading-to-v3/: page.md
docs/src/app/docs/webhook-delivery/: page.md
docs/src/app/docs/webhook-signing/: page.md
docs/src/components/: Button.tsx  Callout.tsx  DocsHeader.tsx  Hero.tsx  HeroBackground.tsx  Icon.tsx  Layout.tsx  Logo.tsx  MobileNavigation.tsx  Navigation.tsx  Prose.tsx  QuickLinks.tsx  Search.tsx  TableOfContents.tsx  ThemeSelector.tsx
docs/src/lib/: navigation.ts
docs/src/markdoc/: nodes.js
docs/src/styles/: prism.css  tailwind.css
policies/: entities.json  example.cedar
src/: lib.rs  main.rs
src/attachment/: inline.rs  mod.rs  s3.rs  tests.rs
src/config/: mod.rs  tests.rs
src/dmarc/: mod.rs  tests.rs
src/health/: mod.rs
src/policy/: mod.rs  tests.rs
src/smtp/: email_parser.rs  ip_limiter.rs  mod.rs  smtp_protocol.rs
src/smtp/tests/: email_parser_tests.rs  smtp_protocol_tests.rs
src/webhook/: mod.rs  tests.rs
tests/: integration.rs  s3_attachment.rs
