[package]
name = "mail_laser" # Use snake_case for the crate name (Rust convention)
version = "0.1.0"
edition = "2021"
description = "A focused Rust-based SMTP server for receiving and forwarding emails to a webhook"
authors = ["Manus AI"]
[[bin]]
name = "mail-laser"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "net", "io-util"] } # Reduced features
hyper = { version = "1.6", features = ["client", "http1"] } # Corrected features for client usage (no tcp)
# Use hyper-rustls instead of hyper-tls to avoid OpenSSL dependency
hyper-rustls = { version = "0.27", features = ["rustls-native-certs"] }
# Utilities commonly needed with hyper 1.x
hyper-util = { version = "0.1", features = ["client", "http1", "tokio"] } # Reduced features for legacy client + tokio rt
http-body-util = "0.1"
bytes = "1"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"


# Release profile settings optimized for binary size
[profile.release]
# Optimize aggressively for size (`z` is smaller than `s`).
opt-level = "z"
# Enable Link-Time Optimization for better cross-crate code removal.
lto = true
# Reduce codegen units for potentially better optimization (at cost of compile time).
codegen-units = 1
# Abort on panic to reduce binary size (removes unwinding code).
panic = "abort"
# Strip debug symbols from the final binary.
strip = true
