[package]
name = "MailLaser"
version = "0.3.0"
edition = "2021"
description = "An SMTP server that listens for incoming emails addressed to a specific recipient and forwards them as HTTP POST requests to a configured webhook."
authors = ["Roland <roland@govcraft.ai>"]
license = "MIT"
repository = "https://github.com/Govcraft/mail-laser"
readme = "README.md"
keywords = ["smtp", "email", "webhook", "server", "forwarding"]
categories = ["email", "network-programming", "web-programming::http-server"]


[[bin]]
name = "mail_laser"
path = "src/main.rs"

[lib]
name = "mail_laser"

[dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "net", "io-util"] } # Reduced features
hyper = { version = "1.6", features = ["client", "http1", "server"] } # Corrected features for client usage (no tcp)
# Use hyper-rustls instead of hyper-tls to avoid OpenSSL dependency
hyper-rustls = { version = "0.27", features = ["rustls-native-certs"] }
# Utilities commonly needed with hyper 1.x
hyper-util = { version = "0.1", features = ["client", "http1", "tokio", "server"] } # Reduced features for legacy client + tokio rt
http-body-util = "0.1"
bytes = "1"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
http-body = "1.0.1"

# TLS Handling with Rustls
rustls = "0.23" # Use a recent version of rustls
tokio-rustls = "0.26" # Compatible tokio-rustls version
rustls-pemfile = "2.1" # For potentially loading PEM files later
rcgen = { version = "0.13", features = ["pem"] } # For generating self-signed certs
yasna = "0.5" # Required by rcgen for ASN.1 types like ObjectIdentifier


[dev-dependencies]
once_cell = "1.19" # For static Mutex in tests

# Release profile settings optimized for binary size
[profile.release]
# Optimize aggressively for size (`z` is smaller than `s`).
opt-level = "z"
# Enable Link-Time Optimization for better cross-crate code removal.
lto = true
# Reduce codegen units for potentially better optimization (at cost of compile time).
codegen-units = 1
# Abort on panic to reduce binary size (removes unwinding code).
panic = "unwind"
# Strip debug symbols from the final binary.
strip = true
